@@ -123,8 +123,9 @@ bool runAllTests() {
     // Triangulation:
     addNPerm(runner);
     addNTriangulation(runner);
-    addConnectedSumDecomp(runner);
     addElementaryMoves(runner);
+    addConnectedSumDecomp(runner);
+    addThreeSphere(runner);
     addNIsomorphism(runner);
     addNHomologicalData(runner);
 
