@@ -42,6 +42,7 @@ void addNPerm(CppUnit::TextUi::TestRunner& runner);
 void addNTriangulation(CppUnit::TextUi::TestRunner& runner);
 void addElementaryMoves(CppUnit::TextUi::TestRunner& runner);
 void addConnectedSumDecomp(CppUnit::TextUi::TestRunner& runner);
+void addThreeSphere(CppUnit::TextUi::TestRunner& runner);
 void addNIsomorphism(CppUnit::TextUi::TestRunner& runner);
 void addNHomologicalData(CppUnit::TextUi::TestRunner& runner);
 
